add check cookie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 github.client.id=115285b7216b4c2397a1
 github.client.secret=29778bd466cb13a52587debbb30e13594c657131
 github.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+
+mybatis.type-aliases-package=com.syz.community.pojo
+mybatis.mapper-locations=classpath:com/syz/community/mapper/*.xml
