--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=123
 
 mybatis.type-aliases-package=com.syz.community.pojo
 mybatis.mapper-locations=classpath:com/syz/community/mapper/*.xml
+
+mybatis.configuration.mapUnderscoreToCamelCase=true
+
+spring.devtools.restart.enabled=true
