--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ mybatis.mapper-locations=classpath:com/syz/community/mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 spring.devtools.restart.enabled=true
+
+pagehelper.helper-dialect=h2
