add mybatis generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
 
-mybatis.type-aliases-package=com.syz.community.pojo
-mybatis.mapper-locations=classpath:com/syz/community/mapper/*.xml
+mybatis.type-aliases-package=com.syz.community.model
+mybatis.mapper-locations=classpath:/mapper/*.xml
 
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
