--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 spring.devtools.restart.enabled=true
 
 pagehelper.helper-dialect=h2
+
+SUMMERNOTE_FILE_UPLOAD=classpath:/static/images
