file upload and remove

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.devtools.restart.enabled=true
 
 pagehelper.helper-dialect=h2
 
-SUMMERNOTE_FILE_UPLOAD=classpath:/static/images
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
