--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
     </dependencies>
 
     <build>
