--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.mode=HTML
-
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
-
 mybatis.type-aliases-package=com.syz.community.model
 mybatis.mapper-locations=classpath:/mapper/*.xml
-
 mybatis.configuration.mapUnderscoreToCamelCase=true
-
 spring.devtools.restart.enabled=true
-
 pagehelper.helper-dialect=h2
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
+logging.file.path=logs/community
+logging.level.root=info
+logging.level.com.syz.community.mapper=debug
+logging.logback.rollingpolicy.max-history=7
+logging.logback.rollingpolicy.max-file-size=20MB
