--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ logging.level.root=info
 #logging.level.com.syz.community.mapper=debug
 logging.logback.rollingpolicy.max-history=7
 logging.logback.rollingpolicy.max-file-size=20MB
+server.servlet.session.timeout=15552000
