--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 logging.file.path=logs/community
 logging.level.root=info
-#logging.level.com.syz.community.mapper=debug
+logging.level.com.syz.community.mapper=debug
 logging.logback.rollingpolicy.max-history=7
 logging.logback.rollingpolicy.max-file-size=20MB
 server.servlet.session.timeout=15552000
